--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.jpg">
+  <meta name="description" content="Nalani Carrillo's Resume">
+  <meta name="author" content="862443573">
 
-  <title>John Doe - Business Administration</title>
+  <title>Nalani Carrillo-Sociology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Nalani Carrillo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/nalani.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,35 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Nalani Carrillo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">Hello, I'm Nalani Carrillo, but I prefer that people call me Lawnie.
+ I’m originally from East Los Angeles, then moved to Covina, California. I've always been drawn to challenges and opportunities that allow me to grow and make an impact. Currently, I'm pursuing a degree in Sociology at the University of California, Riverside, with dreams of becoming a lawyer, either a corporate or criminal lawyer.
 
-        Enter bio here<br><br>
+Athletics played a significant role in my formative years, instilling in me a sense of discipline, teamwork, and resilience. During high school, I was an active participant in both basketball and softball teams, where I learned the importance of perseverance and determination in the face of adversity. These experiences taught me invaluable lessons that I carry with me to this day, shaping my approach to challenges on and off the court.
 
-        Enter bio here
+Beyond sports, I found my voice and passion for performance through choir and musical theater. Immersed in the world of music and stage, I discovered the transformative power of artistic expression. From harmonizing with fellow choir members to delivering captivating performances on stage, these endeavors allowed me to explore my creativity and develop confidence in my abilities.
+e<br><br>
+
+        My journey into the workforce began during my college years, where I embarked on a path of professional development alongside my academic pursuits. From December 2022 to October 2023, I served as a team member at Jamba Juice, where I honed my customer service skills and learned the importance of adaptability in a fast-paced environment. My time at Jamba Juice not only provided me with practical experience but also instilled in me a strong work ethic and a commitment to delivering excellence in all endeavors.
+
+In addition to my academic and professional endeavors, I've remained deeply involved in extracurricular activities, both in high school and college. As a former President of the Latino Culture Club , Theater and Choir groups, I've been privileged to contribute to creating inclusive spaces and fostering a sense of belonging within my community. Moreover, I took the initiative to establish my own club, a testament to my leadership abilities and entrepreneurial spirit.
+<br><br>
+
+        At UC Riverside, I've continued to pursue my passions and expand my horizons through participation in the Jazz Club and Choir. These experiences have not only enriched my college experience but have also reinforced my commitment to personal growth and community engagement. As I continue on my journey, I remain steadfast in my dedication to making a positive impact and striving towards a future where every voice is heard and every individual is empowered to thrive.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/nalani-c-47102b216?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/lawniiee">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/lawniepooo">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:nalani.star1@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +101,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Team Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Jamba Juice</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Assisted with sales <br> 
+              • Maintained Cleanliness of stores<br>
+              • Made smoothies and bowls<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">December 2022- October 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Athletics</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">University of California Riverside </a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assisted with Ticket Sales<br>
+              • Asissted sports games at UCR<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2023- Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Stage Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside Theater</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ran productions in the University Theater<br>
+            • Managed Productions<br>
+            • Assisted Ushers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">October 2023-Present</span>
           </div>
         </div>
 
@@ -152,36 +160,24 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Sociology Major</div>
+            <div>Pre-Law Focus</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2023-Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Covina High School</h3>
+            <div class="subheading mb-3">Diploma</div>
+            <div>High School Graduate</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">2019-2023</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -190,16 +186,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+      <center>
+        <img src="img/athletics.jpg" width="500px">
+        <img src="img/jamba.jpg" width="500px"><br>
+        <img src="img/theater.jpg" width="500px">
+        <img src="img/ucr.jpg" width="500px"><br>
+      </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Nalani Carrillo</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
